<resources>
    <string name="app_name">Poke Data</string>
    <string name="action_settings">Settings</string>

    <!-- UI Main -->

    <string name="search_hint">Pokemon name:</string>

    <string name="id">ID: </string>
    <string name="name">Name: </string>
    <string name="type_1">Type 1: </string>
    <string name="type_2">Type 2: </string>

    <string name="quick_move_1">Quick Move 1: </string>
    <string name="quick_move_2">Quick Move 2: </string>

    <string name="special_move_1">Special Move 1: </string>
    <string name="special_move_2">Special Move 2: </string>
    <string name="special_move_3">Special Move 3: </string>
    <string name="special_move_4">Special Move 4: </string>

    <string name="moveset">MoveSet</string>
    <string name="quick1">Quick 1</string>
    <string name="quick2">Quick 2</string>

    <string name="moveset_quick1_special_move_1">Special Move 1: </string>
    <string name="moveset_quick1_special_move_2">Special Move 2: </string>
    <string name="moveset_quick1_special_move_3">Special Move 3: </string>
    <string name="moveset_quick1_special_move_4">Special Move 4: </string>

    <string name="moveset_quick2_special_move_1">Special Move 1: </string>
    <string name="moveset_quick2_special_move_2">Special Move 2: </string>
    <string name="moveset_quick2_special_move_3">Special Move 3: </string>
    <string name="moveset_quick2_special_move_4">Special Move 4: </string>

    <string name="total_power_p">Total Power %</string>
    <string name="total_power_p_quick1_special_move_1">Special Move 1: </string>
    <string name="total_power_p_quick1_special_move_2">Special Move 2: </string>
    <string name="total_power_p_quick1_special_move_3">Special Move 3: </string>
    <string name="total_power_p_quick1_special_move_4">Special Move 4: </string>

    <string name="total_power_p_quick2_max">Total Power % Max</string>
    <string name="total_power_p_quick2_special_move_1">Special Move 1: </string>
    <string name="total_power_p_quick2_special_move_2">Special Move 2: </string>
    <string name="total_power_p_quick2_special_move_3">Special Move 3: </string>
    <string name="total_power_p_quick2_special_move_4">Special Move 4: </string>


    <string name="total_power">Total Power</string>
    <string name="total_power_quick1_special_move_1">Special Move 1: </string>
    <string name="total_power_quick1_special_move_2">Special Move 2: </string>
    <string name="total_power_quick1_special_move_3">Special Move 3: </string>
    <string name="total_power_quick1_special_move_4">Special Move 4: </string>

    <string name="total_power_quick2_max">Total Power Max</string>
    <string name="total_power_quick2_special_move_1">Special Move 1: </string>
    <string name="total_power_quick2_special_move_2">Special Move 2: </string>
    <string name="total_power_quick2_special_move_3">Special Move 3: </string>
    <string name="total_power_quick2_special_move_4">Special Move 4: </string>

    <!-- UI Detailed -->
    <string name="title_activity_tab">Detail</string>
    <string name="tab_main_data">Main data</string>
    <string name="tab_moveset">Moveset</string>
    <string name="tab_total_power">Total power</string>
    <string name="tab_total_power_p">Total power \%</string>

    <!-- UI Preferences -->
    <string name="title_activity_settings">Preferences</string>

    <string name="pref_user">User</string>
    <string name="pref_title_session">Session</string>
    <string name="pref_summary_session">Remember session</string>

    <string name="pref_data">Data</string>
    <string name="pref_title_offline">Local data</string>
    <string name="pref_summary_offline">Use local data</string>

</resources>
