<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.fran.android.tranosocalculator.fragment.MainDataFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id" />

            <TextView
                android:id="@+id/tvId"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvName"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_1" />

            <TextView
                android:id="@+id/tvType1"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_2" />

            <TextView
                android:id="@+id/tvType2"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_move_1" />

            <TextView
                android:id="@+id/tvQuickMove1"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_move_2" />

            <TextView
                android:id="@+id/tvQuickMove2"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_1" />

            <TextView
                android:id="@+id/tvSpecialMove1"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_2" />

            <TextView
                android:id="@+id/tvSpecialMove2"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_3" />

            <TextView
                android:id="@+id/tvSpecialMove3"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_4" />

            <TextView
                android:id="@+id/tvSpecialMove4"
                style="@style/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
