<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fran.android.tranosocalculator.fragment.TotalPowerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/textViewSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quick1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_1" />

            <TextView
                android:id="@+id/total_power_quick1_special_move_1"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_2" />

            <TextView
                android:id="@+id/total_power_quick1_special_move_2"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_3" />

            <TextView
                android:id="@+id/total_power_quick1_special_move_3"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_4" />

            <TextView
                android:id="@+id/total_power_quick1_special_move_4"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            style="@style/textViewSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quick2" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_1" />

            <TextView
                android:id="@+id/total_power_quick2_special_move_1"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_2" />

            <TextView
                android:id="@+id/total_power_quick2_special_move_2"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_3" />

            <TextView
                android:id="@+id/total_power_quick2_special_move_3"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/special_move_4" />

            <TextView
                android:id="@+id/total_power_quick2_special_move_4"
                style="@style/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            style="@style/textViewSubTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total_power_quick2_max" />

    </LinearLayout>


</FrameLayout>
